[gd_scene load_steps=26 format=2]

[ext_resource path="res://Assets/Tilesheet.png" type="Texture" id=1]
[ext_resource path="res://Scripts/shop.gd" type="Script" id=2]
[ext_resource path="res://Assets/Arial Rounded Bold.ttf" type="DynamicFontData" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "worker",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 170, 34, 34 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "shop",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 15, 11.5 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 10, 3.26644 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 128, 64, 16, 16 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 64, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 192, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 96, 64, 16, 16 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 144, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 160, 64, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 16, 64, 16, 16 )

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [ SubResource( 11 ) ],
"loop": true,
"name": "pack_apple",
"speed": 5.0
}, {
"frames": [ SubResource( 12 ) ],
"loop": true,
"name": "pack_cabbage",
"speed": 5.0
}, {
"frames": [ SubResource( 14 ) ],
"loop": true,
"name": "pack_carrot",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ) ],
"loop": true,
"name": "pack_corn",
"speed": 5.0
}, {
"frames": [ SubResource( 15 ) ],
"loop": true,
"name": "pack_onion",
"speed": 5.0
}, {
"frames": [ SubResource( 13 ) ],
"loop": true,
"name": "pack_orange",
"speed": 5.0
}, {
"frames": [ SubResource( 10 ) ],
"loop": true,
"name": "pack_strawberry",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=17]
animations = [ {
"frames": [ SubResource( 11 ) ],
"loop": true,
"name": "pack_apple",
"speed": 5.0
}, {
"frames": [ SubResource( 12 ) ],
"loop": true,
"name": "pack_cabbage",
"speed": 5.0
}, {
"frames": [ SubResource( 14 ) ],
"loop": true,
"name": "pack_carrot",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ) ],
"loop": true,
"name": "pack_corn",
"speed": 5.0
}, {
"frames": [ SubResource( 15 ) ],
"loop": true,
"name": "pack_onion",
"speed": 5.0
}, {
"frames": [ SubResource( 13 ) ],
"loop": true,
"name": "pack_orange",
"speed": 5.0
}, {
"frames": [ SubResource( 10 ) ],
"loop": true,
"name": "pack_strawberry",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=18]
font_data = ExtResource( 4 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 64, 80, 16, 16 )

[sub_resource type="SpriteFrames" id=20]
animations = [ {
"frames": [ SubResource( 19 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 1 )
region = Rect2( 160, 80, 16, 16 )

[sub_resource type="SpriteFrames" id=22]
animations = [ {
"frames": [ SubResource( 21 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 1 )
region = Rect2( 160, 80, 16, 16 )

[sub_resource type="SpriteFrames" id=24]
animations = [ {
"frames": [ SubResource( 23 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Shop" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="Shop_Worker" type="AnimatedSprite" parent="."]
position = Vector2( 60, 38 )
frames = SubResource( 2 )
animation = "worker"

[node name="Shop_Local" type="AnimatedSprite" parent="."]
position = Vector2( 61, 30 )
frames = SubResource( 4 )
animation = "shop"

[node name="Collision_Shape" type="CollisionShape2D" parent="."]
position = Vector2( 60, 35.5 )
shape = SubResource( 5 )

[node name="Area2D" type="Area2D" parent="."]

[node name="Collision_Shape" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 60, 49.5 )
scale = Vector2( 1, 1.37765 )
shape = SubResource( 6 )

[node name="Purchased_Icon" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 86, 38 )
frames = SubResource( 16 )
animation = "pack_carrot"

[node name="Shop_Menu" type="StaticBody2D" parent="."]
position = Vector2( 26, -13 )
scale = Vector2( 0.2, 0.2 )

[node name="Color_Rect" type="ColorRect" parent="Shop_Menu"]
margin_right = 320.0
margin_bottom = 180.0
color = Color( 0.615686, 0.764706, 0.615686, 0.917647 )

[node name="Pack_Icon" type="AnimatedSprite" parent="Shop_Menu"]
position = Vector2( 78, 70 )
scale = Vector2( 5, 5 )
frames = SubResource( 17 )
animation = "pack_apple"

[node name="Price_Text" type="Label" parent="Shop_Menu"]
margin_left = 159.0
margin_top = 39.0
margin_right = 199.0
margin_bottom = 59.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = SubResource( 18 )
text = "0"
align = 1
valign = 1

[node name="AnimatedSprite" type="AnimatedSprite" parent="Shop_Menu"]
position = Vector2( 246.667, 53.3333 )
scale = Vector2( 2, 2 )
frames = SubResource( 20 )

[node name="Btn_Left" type="Button" parent="Shop_Menu"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 39.0
margin_top = 119.0
margin_right = 68.0
margin_bottom = 140.0

[node name="Btn_Left_Icon" type="AnimatedSprite" parent="Shop_Menu"]
position = Vector2( 60, 131 )
rotation = 1.5708
scale = Vector2( 3, 3 )
frames = SubResource( 22 )

[node name="Btn_Right" type="Button" parent="Shop_Menu"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 88.0
margin_top = 119.0
margin_right = 115.0
margin_bottom = 140.0

[node name="Btn_Right_Icon" type="AnimatedSprite" parent="Shop_Menu"]
position = Vector2( 95, 128 )
rotation = -1.5708
scale = Vector2( 3, 3 )
frames = SubResource( 24 )

[node name="Btn_Buy_Color" type="ColorRect" parent="Shop_Menu"]
margin_left = 161.0
margin_top = 86.0
margin_right = 256.0
margin_bottom = 126.0
color = Color( 1, 0.164706, 0.164706, 1 )

[node name="Btn_Buy" type="Button" parent="Shop_Menu"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 161.0
margin_top = 86.0
margin_right = 256.0
margin_bottom = 126.0

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="pressed" from="Shop_Menu/Btn_Left" to="." method="_on_Btn_Left_pressed"]
[connection signal="pressed" from="Shop_Menu/Btn_Right" to="." method="_on_Btn_Right_pressed"]
[connection signal="pressed" from="Shop_Menu/Btn_Buy" to="." method="_on_Btn_Buy_pressed"]
